Review feedback addressed and user screen UI updated.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">ComposeDemo</string>
+    <string name="back_button_accessibility_text">Back button</string>
+    <string name="web_view_error_message">URL not available</string>
 </resources>
