--- a/feature-users/src/main/res/values/strings.xml
+++ b/feature-users/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="profile_image_accessibility_text">User profile picture</string>
-    <string name="repo_available_label_text">Repo available: %1$s</string>
+    <string name="no_of_followers_label_text" tools:ignore="ExtraTranslation">No. of Followers: %d</string>
     <string name="follow_button_text">Follow</string>
     <string name="unfollow_button_text">Unfollow</string>
 </resources>
