--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">ComposeDemo</string>
     <string name="back_button_accessibility_text">Back button</string>
     <string name="web_view_error_message">URL not available</string>
+    <string name="search_text_placeholder">Search location</string>
 </resources>
