--- a/feature-users/src/main/res/values/strings.xml
+++ b/feature-users/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="total_repo_count_label" tools:ignore="ExtraTranslation">Repos: %1$s</string>
     <string name="follow_button_text">Follow</string>
     <string name="unfollow_button_text">Unfollow</string>
+    <string name="try_again_button_text">Try Again</string>
+    <string name="no_internet_connection_error_text">No Internet Connection</string>
 </resources>
